opam-version: "2.0"
version: "20251119"
license: "LGPL-2.1-or-later WITH OCaml-LGPL-linking-exception"
synopsis: "OxCaml Development Tools"
maintainer: "David Allsopp <dallsopp@janestreet.com>"
authors: [
  "Xavier Leroy"
  "Damien Doligez"
  "Alain Frisch"
  "Jacques Garrigue"
  "Didier Rémy"
  "KC Sivaramakrishnan"
  "Jérôme Vouillon"
]
homepage: "https://oxcaml.org"
bug-reports: "https://github.com/oxcaml/oxcaml/issues"
depends: [
  "ocaml" {>= "4.14.0~~" & < "4.15.0~~"}

  "ocaml-options-vanilla"

  "dune" {>= "3.17.0" & < "3.18.0"}
  "menhir" {= "20231231"}
  "ocamlformat" {>= "0.28.0" & < "0.29.0"}
]
flags: compiler
